# FogROS

./: .gitignore  CMakeLists.txt  README.md  launchto_cloud.launch  package.xml  setup.py
docs/: README.md  _config.yml  quickstart.md
examples/: README  add_two_ints_client.py  add_two_ints_server.py
experiments/: Roscloud experiments.xlsx
launch/: #gqcnn.bash#  README.md  example.launch  gqcnn.bash  gqcnn.launch  gqcnn_client.bash  gqcnn_vpc.bash  mpl.launch  mpt.launch  mpt_client.launch  myscript.launch  openvslam.bash  openvslam_client.bash  openvslam_vpc.bash  roscloud.launch  roscloud_docker.launch  roscloud_gqcnn_docker.launch  roscloud_gqcnn_launch.launch  roscloud_gqcnn_vpc.launch  roscloud_mpl.launch  roscloud_mpt.launch  roscloud_old.launch  roscloud_openvslam.launch  roscloud_openvslam_vpc.launch  roscloud_talker.launch  roscloud_vpc.launch  setup.bash  talker.launch  to_cloud.launch
scripts/: roscloud_base.py  roscloud_docker.py  roscloud_launch.py  roscloud_main.py  roscloud_main.py~  roscloud_vpc.py  rosduct_main.py
src/rosduct/: #rosduct_impl.py#  .#rosduct_impl.py  conversions.py  rosbridge_client.py  rosduct_impl.py
